Add search and deep_search tools with server-orchestrated iterative research
- Add search tool for quick single-round queries
- Add deep_search tool for multi-round research with verification loops
- Refactor shared utilities from deep-research.ts to utils.ts
- Add prompt templates for search, deep-search, and verification rounds
- Update server.ts to register new tools with Zod schemas
- Add DEEP_SEARCH_MAX_ITERATIONS config option
- Update README.md with tool usage documentation
- Mark OpenSpec tasks as completed

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,12 @@
 # Default: 10
 # GEMINI_CLI_MAX_ITERATIONS=10
 
+# Maximum number of verification rounds for deep_search tool
+# The deep_search tool performs server-orchestrated iterative research with verification
+# Each round verifies and enhances the previous result
+# Default: 5
+# DEEP_SEARCH_MAX_ITERATIONS=5
+
 # -----------------------------------------------------------------------------
 # Firecrawl Configuration (Optional)
 # -----------------------------------------------------------------------------
