--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # =============================================================================
-# Gemini Research MCP - Environment Variables Configuration
+# Gemini Search MCP - Environment Variables Configuration
 # =============================================================================
 # Copy this file to .env and configure values as needed
 # Note: Most variables have sensible defaults and are optional
@@ -15,7 +15,7 @@
 
 # Maximum time in milliseconds to wait for Gemini CLI to complete
 # Default: 300000 (5 minutes)
-# GEMINI_RESEARCH_TIMEOUT=300000
+# GEMINI_SEARCH_TIMEOUT=300000
 
 # Custom system prompt template
 # Use {topic}, {depth}, and {model} as placeholders
@@ -55,15 +55,15 @@
 # -----------------------------------------------------------------------------
 
 # Directory for project-level Gemini CLI settings
-# Default: Platform-appropriate (~/.config/gemini-research-mcp/ on Linux)
-# GEMINI_RESEARCH_CONFIG_DIR=/path/to/config
+# Default: Platform-appropriate (~/.config/gemini-search-mcp/ on Linux)
+# GEMINI_SEARCH_CONFIG_DIR=/path/to/config
 
 # -----------------------------------------------------------------------------
 # MCP Server Configuration (HTTP mode only)
 # -----------------------------------------------------------------------------
 
 # Port for the MCP HTTP server to listen on
-# Used by gemini-research-mcp-http binary
+# Used by gemini-search-mcp-http binary
 # Default: 3000
 # MCP_SERVER_PORT=3000
 
