--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "gemini-research-mcp",
+  "name": "gemini-search-mcp",
   "version": "0.1.0",
-  "description": "An MCP server that wraps Google Gemini CLI with Firecrawl integration for deep research capabilities",
+  "description": "An MCP server that wraps Google Gemini CLI with Firecrawl integration for web search capabilities",
   "type": "module",
   "main": "./dist/index.js",
   "bin": {
-    "gemini-research-mcp": "./dist/index.js",
-    "gemini-research-mcp-http": "./dist/http.js"
+    "gemini-search-mcp": "./dist/index.js",
+    "gemini-search-mcp-http": "./dist/http.js"
   },
   "exports": {
     "./package.json": "./package.json"
@@ -36,22 +36,22 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "zod": "^4.0.0",
-    "dotenv": "^16.0.0"
+    "zod": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
-    "typescript": "^5.6.0",
     "tsup": "^8.0.0",
-    "tsx": "^4.0.0"
+    "tsx": "^4.0.0",
+    "typescript": "^5.6.0"
   },
   "engines": {
     "node": ">=22.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/gemini-research-mcp"
+    "url": "https://github.com/your-username/gemini-search-mcp"
   }
 }
