Add CLI help/version flags and update package metadata
Add --help and --version flags to both stdio and HTTP server binaries for
better CLI usability. Update package.json with author info and correct
repository URL. Move legacy docs to OpenSpec archive and add *.tgz to
gitignore for npm pack artifacts

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "web-scraping",
     "ai-agent"
   ],
-  "author": "",
+  "author": "LohZJ lohzian@yahoo.com",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
@@ -52,6 +52,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/gemini-search-mcp"
+    "url": "https://github.com/lohzi97/gemini-search-mcp"
   }
 }
