Used scoped npm package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gemini-search-mcp",
+  "name": "@lohzi97/gemini-search-mcp",
   "version": "0.1.0",
   "description": "An MCP server that wraps Google Gemini CLI with Firecrawl integration for web search capabilities",
   "type": "module",
