--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lohzi97/gemini-search-mcp",
-  "version": "0.1.1",
-  "description": "An MCP server that wraps Google Gemini CLI with Firecrawl integration for web search capabilities",
+  "version": "0.1.2",
+  "description": "An MCP server that wraps Google Gemini CLI for web search capabilities",
   "type": "module",
   "main": "./dist/index.js",
   "bin": {
