feat(search): Add JSON correction fallback for search tools
- Add JSON correction fallback when main search returns invalid JSON
- Add GEMINI_CORRECTION_MODEL config option for separate correction model
- Change GEMINI_MODEL default from 'gemini-2.5-flash' to auto-select
- Refactor retry logic to use shared executeResearchWithCorrection function
- Add startup cleanup for orphaned temp files from previous crashes
- Add model detection from CLI output for metadata.model field
- Update search and deep_search tools with new retry flow
- Add generate-commit opencode command for commit message generation
- Bump package version to 0.1.3

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,14 @@
 
 # Gemini model to use for research (passed via --model flag)
 # Any valid model name is allowed (e.g., gemini-2.5-flash, gemini-2.5-pro, gemini-2.0-flash-exp)
-# Default: gemini-2.5-flash
+# If not set, the Gemini CLI will auto-select the appropriate model
 # GEMINI_MODEL=gemini-2.5-flash
+
+# Gemini model to use for JSON correction tasks (optional)
+# When the main search returns invalid JSON, a separate correction attempt is made
+# This allows using a different model for correction (e.g., a more capable model)
+# If not set, uses the same behavior as GEMINI_MODEL (auto-select if not set)
+# GEMINI_CORRECTION_MODEL=gemini-2.5-pro
 
 # Maximum time in milliseconds to wait for Gemini CLI to complete
 # Default: 300000 (5 minutes)
