refactor(config): Rename GEMINI_CORRECTION_MODEL to SECONDARY_GEMINI_MODEL for broader usage
- Rename config option from GEMINI_CORRECTION_MODEL to SECONDARY_GEMINI_MODEL
- Update fetch.ts to use secondaryGeminiModel for HTML fetching and markdown cleanup
- Update documentation in .env.example, README.md, and OpenSpec files
- Clarify secondary model is used for JSON correction and lightweight fetch tasks
- Remove whitespace in server.ts tool descriptions for consistency

--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,11 @@
 # If not set, the Gemini CLI will auto-select the appropriate model
 # GEMINI_MODEL=gemini-2.5-flash
 
-# Gemini model to use for JSON correction tasks (optional)
-# When the main search returns invalid JSON, a separate correction attempt is made
-# This allows using a different model for correction (e.g., a more capable model)
+# Secondary Gemini model for lightweight tasks (JSON correction, webpage fetching)
+# Uses a faster/smaller model for tasks that don't require deep reasoning
+# Used for: JSON correction in search/deep_search, and HTML fetching in fetch_webpage
 # If not set, uses the same behavior as GEMINI_MODEL (auto-select if not set)
-# GEMINI_CORRECTION_MODEL=gemini-2.5-pro
+# SECONDARY_GEMINI_MODEL=gemini-2.5-flash
 
 # Maximum time in milliseconds to wait for Gemini CLI to complete
 # Default: 300000 (5 minutes)
