refactor(search): Remove fetch_webpage tool and chrome-devtools integration
- Remove fetch_webpage tool and all related code from src/fetch.ts
- Delete fetch-cleanup-prompt.md and fetch-html-prompt.md prompt templates
- Remove turndown and @types/turndown dependencies from package.json
- Remove chrome-devtools MCP server configuration from config-setup and templates
- Update server.ts to unregister fetch_webpage tool, version bumped to 0.2.0
- Update utils.ts to remove chrome-devtools from allowed tools
- Update .env.example to remove webpage fetching reference from SECONDARY_GEMINI_MODEL
- Update README.md to reflect 2 tools instead of 3, remove fetch_webpage documentation
- Update AGENTS.md to remove src/fetch.ts from file organization
- Update openspec/project.md to remove fetch_webpage references
- Mark all OpenSpec tasks as completed in remove-fetch-webpage-tool
- Bump package version from 0.1.9 to 0.2.0

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@
 # If not set, the Gemini CLI will auto-select the appropriate model
 # GEMINI_MODEL=gemini-2.5-flash
 
-# Secondary Gemini model for lightweight tasks (JSON correction, webpage fetching)
+# Secondary Gemini model for lightweight tasks
 # Uses a faster/smaller model for tasks that don't require deep reasoning
-# Used for: JSON correction in search/deep_search, and HTML fetching in fetch_webpage
+# Used for: JSON correction in search/deep_search
 # If not set, uses the same behavior as GEMINI_MODEL (auto-select if not set)
 # SECONDARY_GEMINI_MODEL=gemini-2.5-flash
 
